--- a/frontend-new/src/containers/Home/home.scss
+++ b/frontend-new/src/containers/Home/home.scss
@@ -21,7 +21,7 @@
     background: $grey_variation-1;
     border-radius: 50px;
     -webkit-appearance: none;
-    // -moz-appearance: none;
+    -moz-appearance: none;
     // appearance: none;
     &::-webkit-progress-bar {
       background-color: $grey_variation-1;
@@ -48,7 +48,7 @@
         #71f79e 37%,
         #38f9d7 70%,
         #89c4fe 100%
-      );
+      ) !important;
       border: 0;
       height: 11px;
       border-radius: 50px;
@@ -60,7 +60,7 @@
         #71f79e 37%,
         #38f9d7 70%,
         #89c4fe 100%
-      );
+      ) !important;
       border: 0;
       height: 11px;
       border-radius: 50px;
